infrastructure/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: aura-system
  labels:
    name: aura-system
